--- a/mysql/mysql-secret.yaml
+++ b/mysql/mysql-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
-  namespace: database
+  namespace: database-monitoring
 type: Opaque
 data:
   MYSQL_ROOT_PASSWORD: cGFzc3dvcmQxMjM=  # base64 encoded 'password123'
