--- a/mysql/mysql-statefulset.yaml
+++ b/mysql/mysql-statefulset.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mysql
-  namespace: database
+  namespace: database-monitoring
 spec:
   serviceName: "mysql"
   replicas: 1
